[package]
name = "libpbm"
version = "0.4.1"
edition = "2024"
license = "MIT"
description = "a library for generating netpbm images"
homepage = "https://github.com/Omay238/libpbm"
repository = "https://github.com/Omay238/libpbm"
readme = "README.md"
documentation = "https://docs.rs/libpbm/latest/libpbm"
exclude = ["/images"]

[dependencies]
